basic-elements/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: car-serv
  namespace: car-serv
spec:
  containers:
    - name: car-serv
      image: elroydevops/car-serv
      ports:
        - containerPort: 80
