basic-elements/car-serv-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: car-serv-cluster-ip
  namespace: car-serv
spec:
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-car-serv-car-serv-deployment
  type: ClusterIP
